# hscanner

./: Dockerfile  README.md  hscanner.cabal  input.txt
src/: Lexer.x  Location.hs  Main.hs  Parser.y  Token.hs  Tokens.hs
