cabal-version: 3.0
name: hscanner
version: 0.1.0.0

license: MIT
license-file: LICENSE
build-type: Simple

common warnings
    
    ghc-options: -Wall

executable parser

    import: warnings
    main-is: Main.hs
    
    build-tool-depends:
        alex:alex,
        happy:happy

    build-depends:
        base ^>=4.19.0.0,
        containers,
        aeson,
        array,
        text

    hs-source-dirs: src
    default-language: Haskell2010